--- a/test/index.html
+++ b/test/index.html
@@ -15,26 +15,65 @@ body {
 	font-family: monospace;
 }
 
+#timeliner {
+	width: 850px;
+	height: 400px;
+	border: 2px solid #ccc;
+	resize: both;
+	overflow: auto;
+	position: absolute;
+	top: 0px;
+}
+
 </style>
 
 <div id="box"></div>
+<div id="timeliner"></div>
 <script type="module">
 
-import { Timeliner } from './src/timeliner.js'
+import { Timeliner } from '../src/timeliner.js';
 var target = {
 	x: 0,
 	y: 0,
 	rotate: 0
 };
 
+// Monitor container size changes and resize timeliner accordingly
+const timelinerContainer = document.getElementById('timeliner');
+
 // initialize timeliner
-var timeliner = new Timeliner(target);
+var timeliner = new Timeliner(target, timelinerContainer);
 timeliner.addLayer('x');
 timeliner.addLayer('y');
 timeliner.addLayer('rotate');
 
 timeliner.load({"version":"1.2.0","modified":"Mon Dec 08 2014 10:41:11 GMT+0800 (SGT)","title":"Untitled","layers":[{"name":"x","values":[{"time":0.1,"value":0,"_color":"#893c0f","tween":"quadEaseIn"},{"time":3,"value":3.500023,"_color":"#b074a0"}],"tmpValue":3.500023,"_color":"#6ee167"},{"name":"y","values":[{"time":0.1,"value":0,"_color":"#abac31","tween":"quadEaseOut"},{"time":0.5,"value":-1.000001,"_color":"#355ce8","tween":"quadEaseIn"},{"time":1.1,"value":0,"_color":"#47e90","tween":"quadEaseOut"},{"time":1.7,"value":-0.5,"_color":"#f76bca","tween":"quadEaseOut"},{"time":2.3,"value":0,"_color":"#d59cfd"}],"tmpValue":-0.5,"_color":"#8bd589"},{"name":"rotate","values":[{"time":0.1,"value":-25.700014000000003,"_color":"#f50ae9","tween":"quadEaseInOut"},{"time":2.8,"value":0,"_color":"#2e3712"}],"tmpValue":-25.700014000000003,"_color":"#2d9f57"}]});
 
+
+
+
+// Use ResizeObserver to watch for size changes
+const resizeObserver = new ResizeObserver(entries => {
+	for (let entry of entries) {
+		const { width, height } = entry.contentRect;
+		
+		// Update timeliner size when container changes
+		if (timeliner && timeliner.resize) {
+			timeliner.resize(width, height);
+		}
+	}
+});
+
+// Start observing the timeliner container
+resizeObserver.observe(timelinerContainer);
+
+// Also handle window resize as fallback
+window.addEventListener('resize', () => {
+	const rect = timelinerContainer.getBoundingClientRect();
+	if (timeliner && timeliner.resize) {
+		timeliner.resize(rect.width, rect.height);
+	}
+});
 
 function animate() {
 	requestAnimationFrame(animate);
