--- a/test/index.html
+++ b/test/index.html
@@ -41,7 +41,7 @@
 					name: "Timeline 01",
 					ui: {
 						currentTime: 0,
-						totalTime: 20,
+						totalTime: 10,
 						scrollTime: 0,
 						timeScale: 60,
 					},
@@ -56,24 +56,24 @@
 								{
 									name: "x",
 									frames: [
-										{ time: 0.1, value: 0, _color: "#893c0f", tween: "quadEaseIn" },
-										{ time: 3, value: 3.500023, _color: "#b074a0" }
+										{ time: 0.1, value: 0, _color: "#893c0f", tween: "ease_in_quad" },
+										{ time: 3, value: 3, _color: "#b074a0" }
 									]
 								},
 								{
 									name: "y",
 									frames: [
-										{ time: 0.1, value: 0, _color: "#abac31", tween: "quadEaseOut" },
-										{ time: 0.5, value: -1.000001, _color: "#355ce8", tween: "quadEaseIn" },
-										{ time: 1.1, value: 0, _color: "#47e90", tween: "quadEaseOut" },
-										{ time: 1.7, value: -0.5, _color: "#f76bca", tween: "quadEaseOut" },
+										{ time: 0.1, value: 0, _color: "#abac31", tween: "ease_out_quad" },
+										{ time: 0.5, value: -1, _color: "#355ce8", tween: "ease_in_quad" },
+										{ time: 1.1, value: 0, _color: "#47e90", tween: "ease_out_quad" },
+										{ time: 1.7, value: -0.5, _color: "#f76bca", tween: "ease_out_quad" },
 										{ time: 2.3, value: 0, _color: "#d59cfd" }
 									]
 								},
 								{
 									name: "rotate",
 									frames: [
-										{ time: 0.1, value: -25.700014000000003, _color: "#f50ae9", tween: "quadEaseInOut" },
+										{ time: 0.1, value: -25, _color: "#f50ae9", tween: "ease_in_out_quad" },
 										{ time: 2.8, value: 0, _color: "#2e3712" }
 									]
 								}
@@ -89,24 +89,24 @@
 								{
 									name: "x",
 									frames: [
-										{ time: 0.1, value: 0, _color: "#893c0f", tween: "quadEaseIn" },
-										{ time: 3, value: 3.500023, _color: "#b074a0" }
+										{ time: 0.1, value: 0, _color: "#893c0f", tween: "ease_in_quad" },
+										{ time: 3, value:3, _color: "#b074a0" }
 									]
 								},
 								{
 									name: "y",
 									frames: [
-										{ time: 0.1, value: 0, _color: "#abac31", tween: "quadEaseOut" },
-										{ time: 0.5, value: -1.000001, _color: "#355ce8", tween: "quadEaseIn" },
-										{ time: 1.1, value: 0, _color: "#47e90", tween: "quadEaseOut" },
-										{ time: 1.7, value: -0.5, _color: "#f76bca", tween: "quadEaseOut" },
+										{ time: 0.1, value: 0, _color: "#abac31", tween: "ease_out_quad" },
+										{ time: 0.5, value: -1, _color: "#355ce8", tween: "ease_in_quad" },
+										{ time: 1.1, value: 0, _color: "#47e90", tween: "ease_out_quad" },
+										{ time: 1.7, value: -0.5, _color: "#f76bca", tween: "ease_out_quad" },
 										{ time: 2.3, value: 0, _color: "#d59cfd" }
 									]
 								},
 								{
 									name: "rotate",
 									frames: [
-										{ time: 0.1, value: -25.700014000000003, _color: "#f50ae9", tween: "quadEaseInOut" },
+										{ time: 0.1, value: -25, _color: "#f50ae9", tween: "ease_in_out_quad" },
 										{ time: 2.8, value: 0, _color: "#2e3712" }
 									]
 								}
@@ -122,24 +122,24 @@
 								{
 									name: "x",
 									frames: [
-										{ time: 0.1, value: 0, _color: "#893c0f", tween: "quadEaseIn" },
-										{ time: 3, value: 3.500023, _color: "#b074a0" }
+										{ time: 0.1, value: 0, _color: "#893c0f", tween: "ease_in_quad" },
+										{ time: 3, value:3, _color: "#b074a0" }
 									]
 								},
 								{
 									name: "y",
 									frames: [
-										{ time: 0.1, value: 0, _color: "#abac31", tween: "quadEaseOut" },
-										{ time: 0.5, value: -1.000001, _color: "#355ce8", tween: "quadEaseIn" },
-										{ time: 1.1, value: 0, _color: "#47e90", tween: "quadEaseOut" },
-										{ time: 1.7, value: -0.5, _color: "#f76bca", tween: "quadEaseOut" },
+										{ time: 0.1, value: 0, _color: "#abac31", tween: "ease_out_quad" },
+										{ time: 0.5, value: -1, _color: "#355ce8", tween: "ease_in_quad" },
+										{ time: 1.1, value: 0, _color: "#47e90", tween: "ease_out_quad" },
+										{ time: 1.7, value: -0.5, _color: "#f76bca", tween: "ease_out_quad" },
 										{ time: 2.3, value: 0, _color: "#d59cfd" }
 									]
 								},
 								{
 									name: "rotate",
 									frames: [
-										{ time: 0.1, value: -25.700014000000003, _color: "#f50ae9", tween: "quadEaseInOut" },
+										{ time: 0.1, value: -25, _color: "#f50ae9", tween: "ease_in_out_quad" },
 										{ time: 2.8, value: 0, _color: "#2e3712" }
 									]
 								}
@@ -167,24 +167,24 @@
 								{
 									name: "x",
 									frames: [
-										{ time: 0.1, value: 0, _color: "#893c0f", tween: "quadEaseIn" },
-										{ time: 3, value: 3.500023, _color: "#b074a0" }
+										{ time: 0.1, value: 0, _color: "#893c0f", tween: "ease_in_quad" },
+										{ time: 3, value:3, _color: "#b074a0" }
 									]
 								},
 								{
 									name: "y",
 									frames: [
-										{ time: 0.1, value: 0, _color: "#abac31", tween: "quadEaseOut" },
-										{ time: 0.5, value: -1.000001, _color: "#355ce8", tween: "quadEaseIn" },
-										{ time: 1.1, value: 0, _color: "#47e90", tween: "quadEaseOut" },
-										{ time: 1.7, value: -0.5, _color: "#f76bca", tween: "quadEaseOut" },
+										{ time: 0.1, value: 0, _color: "#abac31", tween: "ease_out_quad" },
+										{ time: 0.5, value: -1, _color: "#355ce8", tween: "ease_in_quad" },
+										{ time: 1.1, value: 0, _color: "#47e90", tween: "ease_out_quad" },
+										{ time: 1.7, value: -0.5, _color: "#f76bca", tween: "ease_out_quad" },
 										{ time: 2.3, value: 0, _color: "#d59cfd" }
 									]
 								},
 								{
 									name: "rotate",
 									frames: [
-										{ time: 0.1, value: -25.700014000000003, _color: "#f50ae9", tween: "quadEaseInOut" },
+										{ time: 0.1, value: -25, _color: "#f50ae9", tween: "ease_in_out_quad" },
 										{ time: 2.8, value: 0, _color: "#2e3712" }
 									]
 								}
@@ -200,17 +200,17 @@
 								{
 									name: "x",
 									frames: [
-										{ time: 0.1, value: 0, _color: "#893c0f", tween: "quadEaseIn" },
-										{ time: 3, value: 3.500023, _color: "#b074a0" }
+										{ time: 0.1, value: 0, _color: "#893c0f", tween: "ease_in_quad" },
+										{ time: 3, value:3, _color: "#b074a0" }
 									]
 								},
 								{
 									name: "y",
 									frames: [
-										{ time: 0.1, value: 0, _color: "#abac31", tween: "quadEaseOut" },
-										{ time: 0.5, value: -1.000001, _color: "#355ce8", tween: "quadEaseIn" },
-										{ time: 1.1, value: 0, _color: "#47e90", tween: "quadEaseOut" },
-										{ time: 1.7, value: -0.5, _color: "#f76bca", tween: "quadEaseOut" },
+										{ time: 0.1, value: 0, _color: "#abac31", tween: "ease_out_quad" },
+										{ time: 0.5, value: -1, _color: "#355ce8", tween: "ease_in_quad" },
+										{ time: 1.1, value: 0, _color: "#47e90", tween: "ease_out_quad" },
+										{ time: 1.7, value: -1, _color: "#f76bca", tween: "ease_out_quad" },
 										{ time: 2.3, value: 0, _color: "#d59cfd" }
 									]
 								}
@@ -223,6 +223,10 @@
 
 		const timelinerContainer = document.getElementById('timeliner');
 		const timeliner = new Timeliner(sample_data_01, timelinerContainer);
+
+		// setTimeout(() => {
+		// 	timeliner.data = sample_data_01;
+		// }, 2000);
 
 		// Use ResizeObserver to watch for size changes
 		const resizeObserver = new ResizeObserver(entries => {
